# be-pfi

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  config.py  deploy.sh  gunicorn.py  main.py  pyproject.toml  readme.md  sql.sql
app/: __init__.py
app/config/: config.py  database.py
app/controllers/: __init__.py  admin_controller.py  chart_controller.py  envelope_controller.py  eq_tree_controller.py  feature_controller.py  master_category_controller.py  master_equipment_controller.py  master_tag_controller.py  part_controller.py  prediction_controller.py  value_tag_controller.py
app/middlewares/: token_verify.py
app/models/: __init__.py  master_tag_model.py  value_tag_model.py
app/resources/: eq_tree_resource.py  feature_resource.py  master_category_resource.py  master_equipment_resource.py  master_tag_resource.py  part_resource.py  tag_values_resource.py
app/routes/: __init__.py  admin_route.py  category_route.py  chart_route.py  eq_tree_route.py  equipment_route.py  feature_route.py  part_route.py  predict_route.py  report_route.py  schedule_route.py  tag_route.py  value_tag_route.py
app/services/: response.py
app/services/files/: read.py
app/services/models/: envelope_model.py  eq_tree_model.py  equipment_model.py  feature_data_model.py  feature_model.py  oh_schedule_model.py  part_model.py  predict_model.py  tag_model.py  unit_model.py
app/services/orm/: eq_tree.py  master_category.py  master_equipment.py  master_tag.py  tag_value.py
app/static/: index.html
public/: API_PI_Tag.xlsx  master_tag_records.json
