[tool.poetry]
name = "ipf-backend"
version = "0.1.0"
description = ""
authors = ["Perdana Main <firman.fp123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-migrate = "^4.0.7"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
flask-cors = "^5.0.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
