[tool.poetry]
name = "be-pfi"
version = "0.1.0"
description = ""
authors = ["Perdana Main <firman.fp123@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-migrate = "^4.0.7"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
flask-cors = "^5.0.0"
gunicorn = "^23.0.0"
starlette = "^0.39.0"
flask-bcrypt = "^1.0.1"
requests = "^2.32.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
digital-twin-migration = {git = "https://github.com/Cizz22/digital-twin-migration/"}
flask-swagger-ui = "^4.11.1"
werkzeug = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
